--- a/style.css
+++ b/style.css
@@ -1,3 +1,88 @@
-h1 {
-    color:aquamarine;
-}
+#one, #two, #three {
+    background-color: #888888;
+    border-radius: 2px;
+    height: 5px;
+    z-index: 3;
+    text-shadow: 1px 1px 1px #333333;
+    }
+    
+    #one {
+    transition: transform 0.5s;
+    transition-delay: 0.25s;
+    }
+    
+    #three {
+    transition: transform 0.5s;
+    transition-delay: 0.25s;
+    }
+    
+    #two {
+    transition: transform 0.05s, opacity 0.5s;
+    }
+    
+    
+    #menuButton {
+    position: absolute;
+    top: 40px;
+    right: 50px;
+    display: flex;
+    height: 35px;
+    width: 40px;
+    flex-direction: column;
+    justify-content: space-between;
+    transform: rotate(0deg);
+    z-index: 4;
+    }
+    
+    #writing, #title {
+    transition: opacity 0.5s;
+    }
+    
+    #heading {
+    z-index: 5;
+    }
+    
+    br {
+    height: 5px;
+    border: solid 1px green;
+    }
+    
+    body {
+    background-color: #0000cc;
+    color: #888888;
+    padding: 100px;
+    }
+    
+    #right, #left {
+    height: 120%;
+    background-color: red;
+    width: 0%;
+    position: absolute;
+    top: 0;
+    transition: width 0.5s;
+    }
+    
+    #right {
+    right: 0;
+    }
+    
+    #left {
+    left:0;
+    z-index: -1;
+    }
+    
+    #menu {
+    position: absolute;
+    bottom: 0px;
+    height: 150%;
+    margin: 0 30% 0 30%;
+    text-align: center;
+    }
+    
+    .buttons {
+    position: relative;
+    transition: top 0.25s;
+    transition-delay: 0.6s;
+    font-size: 40px;
+    top: 0px;
+    }
