--- a/style.css
+++ b/style.css
@@ -6,15 +6,11 @@
     text-shadow: 1px 1px 1px #333333;
     }
     
-    #one {
+    #one, #three {
     transition: transform 0.5s;
     transition-delay: 0.25s;
     }
     
-    #three {
-    transition: transform 0.5s;
-    transition-delay: 0.25s;
-    }
     
     #two {
     transition: transform 0.05s, opacity 0.5s;
@@ -35,6 +31,7 @@
     }
     
     #writing, #title {
+        opacity: 0;
     transition: opacity 0.5s;
     }
     
@@ -48,18 +45,18 @@
     }
     
     body {
-    background-color: #0000cc;
+    background: linear-gradient(-45deg, #00006a, black);
     color: #888888;
     padding: 100px;
     }
     
     #right, #left {
     height: 120%;
-    background-color: red;
+    background-color: rgb(1, 41, 102);
     width: 0%;
     position: absolute;
     top: 0;
-    transition: width 0.5s;
+    transition: width 0.75s;
     }
     
     #right {
@@ -81,8 +78,10 @@
     
     .buttons {
     position: relative;
-    transition: top 0.25s;
-    transition-delay: 0.6s;
+    transition: top 0.75s;
+    transition-delay: 0.2s;
     font-size: 40px;
     top: 0px;
+    text-decoration: none;
+    color: #888888;
     }
