--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@
     }
     
     #right, #left {
-    height: 120%;
+    height: 100%;
     background-color: rgb(1, 41, 102);
     width: 0%;
     position: absolute;
@@ -62,6 +62,7 @@
     
     #right {
     right: 0;
+    z-index: -1;
     }
     
     #left {
@@ -73,9 +74,15 @@
     position: absolute;
     bottom: 0px;
     height: 150%;
-    margin: 0 30% 0 30%;
-    text-align: center;
+    width: 40%;
+    left:30%;
+    right: 30%;
     z-index: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    border: solid 1px red;
     }
     
     .buttons {
@@ -86,6 +93,7 @@
     top: 0px;
     text-decoration: none;
     color: #888888;
+    flex-shrink: 1;
     }
 
 
