--- a/style.css
+++ b/style.css
@@ -30,10 +30,10 @@
     z-index: 4;
     }
     
-    #writing, #title, #container {
+    #writing, #title, #container, #writing2, #writing3, #writing4, #articleBox {
         opacity: 0;
     transition: opacity 0.8s;
-    z-index: -2;
+    z-index: 1;
     }
     
     #heading {
@@ -77,7 +77,7 @@
     width: 40%;
     left:30%;
     right: 30%;
-    z-index: 1;
+    z-index: -1;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -171,4 +171,17 @@ right: 15%;
 #card, #back {
     transition: transform 2s;
     transform: rotateY(180deg);
+}
+
+/*below here deals with about page*/
+#next, #previous {
+background-color: transparent;
+color: white;
+z-index: 13;
+border: none;
+}
+
+#clicker {
+    position: absolute;
+    right: 30%;
 }
