--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@
     z-index: 4;
     }
     
-    #writing, #container, #writing2, #writing3, #writing4, #writing5, #writing6, #writing7, #writing8 #articleBox {
+    #writing, #container, #options {
         opacity: 0;
     transition: opacity 0.8s;
     z-index: 1;
@@ -114,9 +114,9 @@
 #container {
     display: flex;
     flex-wrap: wrap;
-    left: 20%;
-    right: 20%;
-    width: 60%;
+    left: 15%;
+    right: 15%;
+    width: 70%;
     position: absolute;
     z-index: 11;
     flex-direction: row;
@@ -129,6 +129,7 @@ figure {
 width: 45%;
 margin: 0px;
 transition: width 0.75s;
+text-indent: 0px;
 }
     img {
         width: 100%;
@@ -147,21 +148,19 @@ transition: width 0.75s;
     /*below here deals with feature*/
 
 #cardBox {
-    position: absolute;
+    position: relative;
     left: 30%;
-    right: 30%;
-    width: 40%;
-    height: auto;
-background-color: white;
+    width: 60%;
+    padding-top: 40%;
 z-index: 1;
 }
 
 #back, #deckBack, #card {
     position: absolute;
-    width: 70%;
-    height: auto;
-left: 15%;
-right: 15%;
+    width: 45%;
+    height: 100%;
+    left: 0%;
+bottom: 0%;
 }
 
 #deckBack {
@@ -170,19 +169,60 @@ right: 15%;
 
 #back {
     z-index: 2;
-
+transform: rotateY('0deg');
 }
 
 #card {
     z-index: 1;
+    transform: rotateY('0deg');
 }
 
 #card, #back {
-    transition: transform 2s;
-    transform: rotateY(180deg);
+    transition: transform 1s, left 0.5s;
+    transition-timing-function: linear;
 }
 
-/*below here deals with about page*/
+#options {
+    text-indent: 0px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    right: 10%;
+    width: 20%;
+    height: 420px;
+    column-gap: 10px;
+    position: relative;
+    justify-content: space-evenly;
+    z-index: 12;
+}
+
+
+.options {
+    background-color: green;
+    padding: 2px 2px 2px 2px;
+    border: solid white 4px;
+    color: white;
+    border-radius: 3px;
+    z-index: 20;
+}
+
+.options:active {
+    border-color: orange;
+    color: orange;
+}
+
+#cardCount {
+    color: #888888;
+    position: relative;
+    top: 20px;
+}
+
+
+/*below here deals with ABOUT page*/
+
+
+
+
 #next, #previous {
 background-color: transparent;
 color: white;
@@ -192,5 +232,5 @@ border: none;
 
 footer {
     position: relative;
-    bottom: 0px;
+    top: 50px;
 }
