--- a/style.css
+++ b/style.css
@@ -165,6 +165,7 @@ bottom: 0%;
 
 #deckBack {
     z-index: 0;
+    transition: left 0.1s;
 }
 
 #back {
@@ -178,7 +179,7 @@ transform: rotateY('0deg');
 }
 
 #card, #back {
-    transition: transform 1s, left 0.5s;
+    transition: transform 0.5s, left 0.5s;
     transition-timing-function: linear;
 }
 
